--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,9 @@
   <body>
 
     <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
-      <h5 class="my-0 mr-md-auto font-weight-normal">UniFront</h5>
+      <h5 class="my-0 mr-md-auto font-weight-normal">
+          <a href="/"><img src="assets/logo1.png" alt="" class="logo"></a>
+      </h5>
 
 
       <div class="col-md-5">
