Show line item quantity

--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -61,6 +61,7 @@
   </div>
 
 <div class="actions">
+  <%= link_to '', new_conversation_path(:recipient_id => @line_item.product.user.id), class: 'send-message-icon' %>
   <script
     src="https://checkout.stripe.com/checkout.js" class="stripe-button"
     data-key="pk_test_j79CwAThdaez7YmR7wIfU6px"
