--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,9 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track'=> true %>
     <%= javascript_include_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
 
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <p class="notice"><%= notice %></p>
        <p class="alert"><%= alert %></p>
 
@@ -17,7 +20,7 @@
 
     <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
       <h5 class="my-0 mr-md-auto font-weight-normal">
-          <a href="/"><img src="assets/logo1.png" alt="" class="logo"></a>
+          <a href="/"><img src="/assets/logo1.png" alt="" class="logo"></a>
       </h5>
 
 
@@ -57,12 +60,22 @@
           <a class="p-2 text-muted" <%= link_to "Product", root_path %></a>
            <% if  user_signed_in? %>
           <a class="p-2 text-muted" <%= link_to "My account", profil_path %></a>
-          <a class="p-2 text-muted" data-toggle="modal" data-target="#cart">My Cart<span class="badge"><%= @cart.line_item.count %></span></a>
-             <% end %>
+          <a class="p-2 text-muted" data-toggle="modal" data-target="#cart">My Cart<span class="badge">
+              <%= @cart.line_item.sum(:quantity) %></span></a>
+          <% end %>
         </nav>
         </nav>
       </div><hr>
     <%= yield %>
+    <br><br>
+<hr><hr>
 
   </body>
+
+<footer class="footer">
+      <div class="container">
+        <span class="text-muted">Unifront</span>
+      </div>
+    </footer>
+
 </html>
