--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -24,7 +24,7 @@
 
   <div class="field">
     <%= form.label :image %>
-    <%= form.file_field :image, type: :file, multiple: true %>
+    <%= form.file_field :image %>
   </div>
 
   <div class="field">
