--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,8 +1,5 @@
 <p id="notice"><%= notice %></p>
 
-<link rel="stylesheet" href="jquery.raty.css">
-<script src="jquery.raty.js"></script>
-
 <div class="panel panel-default">
   <div class="panel-body"> <br>
     <div class="row">
@@ -39,7 +36,7 @@
                             <td>
                                 <div class="col-md-8">
                                         <div class="input-group">
-                                    <span class="input-group-btn">
+                                    <!-- <span class="input-group-btn">
                                         <button type="button" class="quantity-left-minus btn btn-light btn-number"  data-type="minus" data-field="">
                                           <span class="glyphicon glyphicon-minus"></span>
                                         </button>
@@ -49,7 +46,7 @@
                                         <button type="button" class="quantity-right-plus btn btn-light btn-number" data-type="plus" data-field="">
                                             <span class="glyphicon glyphicon-plus"></span>
                                         </button>
-                                    </span>
+                                    </span> -->
                                 </div>
                         </div>
                             </td>
