--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,10 +12,9 @@
  *
  *= require_tree .
  *= require_self
-
+ *= require bootstrap
+ *= require lightbox
  */
-
-@import "bootstrap";
 
 
  #custom-search-input{
