--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <%= favicon_link_tag asset_path('unifront-fav.png'), :rel => 'icon', :type =>  'image/png' %>
     <title>Unifront</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
