redesign login page and footer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
     <p class="notice"><%= notice %></p>
        <p class="alert"><%= alert %></p>
 
-  </head>
+  </head
 
   <body>
 
@@ -69,16 +69,10 @@
       </div><hr>
     <%= yield %>
     <br><br>
-<hr><hr>
-
+<footer class="container-fluid bg-secondary text-center">
+  <p><div class="footer-text text-light"><br>&copy;Unifront | <a href="unifront.herokuapp.com">unifront.herokuapp.com</a></div></a></p><br><br>
+</footer>
   </body>
-
-<footer class="footer">
-      <div class="container">
-        <span class="text-muted">Unifront</span>
-      </div>
-    </footer>
-
 </html>
 
 <%= render 'layouts/cart' %>
